# Ecess-backend-official

./: .gitignore  config.py  main.py  pyproject.toml
app/: admin_events.py  admin_team.py  app.py  auth.py  cloudinary_sevice.py  public_events.py  public_team.py
database/: database.py  models.py
middleware/: isAdmin.py
schemas/: event_schema.py  team_schema.py
